--- a/pkos-stoarge-local/local-path-provisioner/local-path-storage.yaml
+++ b/pkos-stoarge-local/local-path-provisioner/local-path-storage.yaml
@@ -50,7 +50,7 @@ metadata:
   name: local-path-provisioner
   namespace: local-path-storage
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: local-path-provisioner
@@ -59,11 +59,9 @@ spec:
       labels:
         app: local-path-provisioner
     spec:
-      nodeSelector:
-        kubernetes.io/hostname: ${MNODE}
       tolerations:
         - effect: NoSchedule
-          key: node-role.kubernetes.io/control-plane
+          key: node-role.kubernetes.io/node
           operator: Exists
       serviceAccountName: local-path-provisioner-service-account
       containers:
