--- a/pkos-observability/monitoring/thanos/values-thanos.yaml
+++ b/pkos-observability/monitoring/thanos/values-thanos.yaml
@@ -3,8 +3,8 @@ objstoreConfig: |-
   config:
     bucket: monitoring
     endpoint: minio.minio.svc.cluster.local:9000
-    access_key: aajl91wFPCRVmfWR
-    secret_key: SfP4woqjY3fcyh1cuwF1CNQFEe6hs4X6
+    access_key: Eb0Jn4X6Sdr9I3Ux
+    secret_key: TXDXAOMktbYMV9o8666IKFty17PkzbMM
     insecure: true 
 querier:
   stores:
