--- a/aews-eksctl/cloudformation-bastion.yaml
+++ b/aews-eksctl/cloudformation-bastion.yaml
@@ -174,6 +174,28 @@ Resources:
       SubnetId: !Ref PublicSubnet2
       RouteTableId: !Ref PublicSubnetRouteTable
 
+
+  NatGatewayEIP1:
+    DependsOn:
+    - VPCGatewayAttachment
+    Type: 'AWS::EC2::EIP'
+    Properties:
+      Domain: vpc
+
+  NatGateway01:
+    DependsOn:
+    - NatGatewayEIP1
+    - PublicSubnet1
+    - VPCGatewayAttachment
+    Type: AWS::EC2::NatGateway
+    Properties:
+      AllocationId: !GetAtt 'NatGatewayEIP1.AllocationId'
+      SubnetId: !Ref PublicSubnet1
+      Tags:
+      - Key: Name
+        Value: !Sub '${ClusterBaseName}-NatGatewayAZ1'
+
+
 # PrivateSubnets
   PrivateSubnet1:
     Type: AWS::EC2::Subnet
@@ -186,7 +208,7 @@ Resources:
           Value: !Sub ${ClusterBaseName}-PrivateSubnet1
         - Key: kubernetes.io/role/internal-elb
           Value: 1
-
+  
   PrivateSubnet2:
     Type: AWS::EC2::Subnet
     Properties:
@@ -199,6 +221,7 @@ Resources:
         - Key: kubernetes.io/role/internal-elb
           Value: 1
 
+
   PrivateSubnetRouteTable:
     Type: AWS::EC2::RouteTable
     Properties:
@@ -206,6 +229,16 @@ Resources:
       Tags:
         - Key: Name
           Value: !Sub ${ClusterBaseName}-PrivateSubnetRouteTable
+
+  PrivateRoute:
+    DependsOn:
+      - VPCGatewayAttachment
+      - NatGateway01
+    Type: AWS::EC2::Route
+    Properties:
+      RouteTableId: !Ref PrivateSubnetRouteTable
+      DestinationCidrBlock: 0.0.0.0/0
+      NatGatewayId: !Ref NatGateway01
 
   PrivateSubnet1RouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
@@ -219,6 +252,9 @@ Resources:
       SubnetId: !Ref PrivateSubnet2
       RouteTableId: !Ref PrivateSubnetRouteTable
 
+
+
+
 # EKSCTL-Host
   EKSEC2SG:
     Type: AWS::EC2::SecurityGroup
@@ -229,13 +265,26 @@ Resources:
         - Key: Name
           Value: !Sub ${ClusterBaseName}-HOST-SG
       SecurityGroupIngress:
-      - IpProtocol: '-1'
-        #FromPort: '22'
-        #ToPort: '22'
+      - IpProtocol: tcp
+        FromPort: '22'
+        ToPort: '22'
         CidrIp: !Ref SgIngressSshCidr
-      SecurityGroupEgress:
-        - IpProtocol: "-1"
-          CidrIp: "0.0.0.0/0"
+
+  ControlPlaneSecurityGroup:
+    DependsOn:
+      - EKSEC2SG
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: Cluster communication with worker nodes
+      VpcId: !Ref EksVPC
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 443
+          ToPort: 443
+          SourceSecurityGroupId: !Ref EKSEC2SG
+      Tags:
+        - Key: Name
+          Value: !Sub ${ClusterBaseName} Control Plane Security Group
 
   EKSEC2:
     Type: AWS::EC2::Instance
@@ -331,11 +380,6 @@ Resources:
             # Install Docker
             amazon-linux-extras install docker -y
             systemctl start docker && systemctl enable docker
-            
-            # Install nerdctl 
-            wget https://github.com/containerd/nerdctl/releases/download/v1.3.1/nerdctl-1.3.1-linux-amd64.tar.gz
-            tar -xzf nerdctl-1.3.1-linux-amd64.tar.gz 
-            sudo mv nerdctl /usr/local/bin/
 
             # CLUSTER_NAME
             export CLUSTER_NAME=${ClusterBaseName}
@@ -347,3 +391,4 @@ Resources:
 Outputs:
   eksctlhost:
     Value: !GetAtt EKSEC2.PublicIp
+
