--- a/aews-addon/externaldns.yaml
+++ b/aews-addon/externaldns.yaml
@@ -60,12 +60,12 @@ spec:
           args:
             - --source=service
             - --source=ingress
-            - --domain-filter=hanhorang.link  # will make ExternalDNS see only the hosted zones matching provided domain, omit to process all available hosted zones
+            - --domain-filter=${MyDomain} # will make ExternalDNS see only the hosted zones matching provided domain, omit to process all available hosted zones
             - --provider=aws
             #- --policy=upsert-only # would prevent ExternalDNS from deleting any records, omit to enable full synchronization
             - --aws-zone-type=public # only look at public hosted zones (valid values are public, private or no value for both)
             - --registry=txt
-            - --txt-owner-id=Z08463751O7YNWD79KKIX
+            - --txt-owner-id=${MyDnzHostedZoneId}
           env:
             - name: AWS_DEFAULT_REGION
               value: ap-northeast-2 # change to region where EKS is installed
