--- a/k8s-app/vote-app-alb/vote-ingress.yaml
+++ b/k8s-app/vote-app-alb/vote-ingress.yaml
@@ -6,14 +6,14 @@ metadata:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
-    external-dns.alpha.kubernetes.io/hostname: hanhorang.link
-    external-dns.alpha.kubernetes.io/set-identifier: vote
+    external-dns.alpha.kubernetes.io/hostname: vote.hanhorang.link
+    external-dns.alpha.kubernetes.io/set-identifier: blue
     external-dns.alpha.kubernetes.io/aws-weight: '1'
 spec:
   rules:
     - http:
         paths:
-          - path: /vote
+          - path: /
             pathType: Prefix
             backend:
               service:
